ubuntu-mate-welcome (17.10.7) UNRELEASED; urgency=medium

  * Update Ambient Noise for Zesty and Artful.
  * Update Atom, Brave, LibreOffice, Luminance-HDR, Peek and Solaar for
    Artful.

 -- Martin Wimpress <martin@ubuntu-mate.org>  Tue, 20 Jun 2017 10:32:47 +0100

ubuntu-mate-welcome (17.10.6) artful; urgency=medium

  * Fix Steam install for Ubuntu MATE 16.04.
  * Fix Boutique logic when choosing "shared" codename configurations
  * Update translations. (LP: #1689512)

 -- Martin Wimpress <martin@ubuntu-mate.org>  Thu, 18 May 2017 20:31:50 +0100

ubuntu-mate-welcome (17.10.5) artful; urgency=medium

  * Add Slack and Recent Notifications.

 -- Martin Wimpress <martin@ubuntu-mate.org>  Thu, 18 May 2017 20:31:50 +0100

ubuntu-mate-welcome (17.10.4) artful; urgency=medium

  * Correct documentation for Compiz Scale effect, which is now Super+s.

 -- Martin Wimpress <martin@ubuntu-mate.org>  Mon, 15 May 2017 01:08:01 +0100

ubuntu-mate-welcome (17.10.3) artful; urgency=medium

  * Add Etcher.
  * Improve detection of Ubuntu MATE.

 -- Martin Wimpress <martin@ubuntu-mate.org>  Sun, 14 May 2017 20:23:19 +0100

ubuntu-mate-welcome (17.10.2) artful; urgency=medium

  * Add additional theme installer to Getting Started.
  * Add Brackets, Entangle, Luminance HDR, Sound Converter and Wire.
  * Re-enable Opera.
  * Update translations.

 -- Martin Wimpress <martin@ubuntu-mate.org>  Sat, 13 May 2017 00:27:55 +0100

ubuntu-mate-welcome (17.10.1) artful; urgency=medium

  * Updated Software Boutique to support 17.10.
  * Remove obsolete applications from the Software Boutique.
  * Add Brave, HexChat, Transmission, Microsoft Visual Studio Code,
    Nextcloud client, Peek and VLC.

 -- Martin Wimpress <martin@ubuntu-mate.org>  Tue, 25 Apr 2017 01:43:54 +0100

ubuntu-mate-welcome (17.10.0) artful; urgency=medium

  * Upload for Artful.

 -- Martin Wimpress <email address hidden>  Fri, 21 Apr 2017 19:35:47 +0100

ubuntu-mate-welcome (17.04.12) zesty; urgency=medium
