@@ -79,7 +79,7 @@
             "arch": "i386,amd64,armhf,arm64",
             "releases": "xenial,yakkety,zesty,artful",
             "pre-install": {
-                "xenial,yakkety": {
+                "xenial,yakkety,zesty": {
                     "method": "ppa",
                     "enable-ppa": "ppa:caffeine-developers/ppa",
                     "source-file": "caffeine-developers-ubuntu-ppa-CODENAME"
