@@ -7,7 +7,8 @@
             "peek": "add-source",
             "libreoffice": "general",
             "atom": "add-source",
-            "solaar": "general"
+            "solaar": "general",
+            "caffeine": "general"
         }
    },
     "17.10.6": {
