@@ -1,5 +1,6 @@
 ubuntu-mate-welcome (17.10.7) UNRELEASED; urgency=medium
 
+  * Update Caffeince for Zesty.
   * Update Ambient Noise for Zesty and Artful.
   * Update Atom, Brave, LibreOffice, Luminance-HDR, Peek and Solaar for
     Artful.
